#15 add c:params option for c:url, add tests for it, fix recursive test calls for mocha

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "render JSP to HTML",
   "main": "index.js",
   "scripts": {
-    "test": "mocha",
+    "test": "mocha --recursive",
     "demo": "supervisor demo/test.js"
   },
   "author": "Guillaume Pasquet",
